--- a/www/index.html
+++ b/www/index.html
@@ -29,8 +29,8 @@
         <div class="app">
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event listening">Rotikuu</p>
+                <p class="event received">Rotimuu</p>
             </div>
         </div>
         <script type="text/javascript" src="phonegap.js"></script>
